--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Agrandir:wght@400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Agrandir:wght@400&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400&display=swap"); */
 body {
   margin: 0;
   line-height: normal;
