--- a/src/CashApp.css
+++ b/src/CashApp.css
@@ -25,7 +25,8 @@
   position: fixed;
   top: 0;
   width: 1360px;
-  background-image: url(./Vector.png);
+  /* background-image: url(./Vector.png); */
+  background-image: url(/public/Vector.png);
 }
 
 /* Hero-Section */
@@ -78,7 +79,7 @@
   position: absolute;
   /* top: 0; */
   width: 64px;
-  background-image: url(./eye-button.png);
+  background-image: url(/public/eye-button.png);
 
 }
 .hero-section .navbar {
@@ -125,7 +126,7 @@
   width: 30px;
 }
 .cashapp-logo {
-  background-image: url(./logo.svg);
+  background-image: url(/public/logo.svg);
   background-size: 100% 100%;
   height: 44px;
   width: 30px;
@@ -166,7 +167,7 @@
   position: absolute;
   top: 0px;
   width: 1360px;
-  background-image: url(./sunrays.png)
+  background-image: url(/public/sunrays.png)
 
   } 
 .hero-section .div {
@@ -195,7 +196,7 @@
   position: absolute;
   top: 140px;
   width: 370px;
-  background-image: url(./intro-phone-1.png);
+  background-image: url(/public/intro-phone-1.png);
 }
 /* .hero-section .intro-phone {
   height: 453px;
@@ -228,7 +229,7 @@
   position: absolute;
   top: 48px;
   width: 74px;
-  background-image: url(./intro-cube\ 1.png);
+  background-image: url(/public/intro-cube\ 1.png);
 }
 
 .intro-cubes {
@@ -238,7 +239,7 @@
   position: absolute;
   top: 447px;
   width: 188px;
-  background-image: url(./intro-cubes\ 1.png);
+  background-image: url(/public/intro-cubes\ 1.png);
 }
 
 .hero-section .intro-pillar {
@@ -248,7 +249,7 @@
   position: absolute;
   top: 447px;
   width: 288px;
-  background-image: url(./intro-pillar\ 1.png);
+  background-image: url(/public/intro-pillar\ 1.png);
 }
 
 .hero-section .intro-stairs {
@@ -258,7 +259,7 @@
   position: absolute;
   top: 48px;
   width: 200px;
-  background-image: url(./intro-stairs\ 1.png);
+  background-image: url(/public/intro-stairs\ 1.png);
 }
 
 .fixed-footer {
@@ -307,7 +308,7 @@
   margin-top: -11.41px;
   position: relative;
   width: 19.22px;
-  background-image: url(./applestore.png);
+  background-image: url(/public/applestore.png);
 }
 
 .fixed-footer .label {
@@ -344,7 +345,7 @@
   height: 21.22px;
   position: relative;
   width: 19.45px;
-  background-image: url(./googleplay.png) !important;
+  background-image: url(/public/googleplay.png) !important;
 }
 
 .fixed-footer .label-2 {
@@ -406,7 +407,7 @@
   position: absolute;
   top: 18px;
   width: 18px;
-  background-image: url(./Vector.png);
+  background-image: url(/public/Vector.png);
 }
 
 .fixed-footer .frame {
@@ -421,7 +422,7 @@
   height: 692px;
   position: relative;
   width: 1359.99px;
-  background-image: url(./sunrays.png);
+  background-image: url(/public/sunrays.png);
   }
   /* .label {
     height: 65px;
@@ -448,19 +449,19 @@
       height: 24px;
       position: relative;
       width: 24px;
-      background-image: url(./Frame\(2\).png);
+      background-image: url(/public/Frame\(2\).png);
       }
       .buttons-2 .img {
       height: 17px;
       position: relative;
       width: 21px;
-      background-image: url(./Frame\(1\).png) !important;
+      background-image: url(/public/Frame\(1\).png) !important;
       }
       .buttons-2 .frame-2 {
       height: 21px;
       position: relative;
       width: 21px;
-      background-image: url(./Frame-insta.png);
+      background-image: url(/public/Frame-insta.png);
       }
       
   /* Section Payments */
@@ -479,7 +480,7 @@
   }
   
   .payments-floor {
-    background-image: url(./payments-floor\ 1.png);
+    background-image: url(/public/payments-floor\ 1.png);
     background-size: 100% 100%;
     height: 296px;
     width: 1366px;
@@ -534,7 +535,7 @@
     position: absolute;
     top: 0;
     width: 750px;
-    background-image: url(./payments-phone\ 1.png);
+    background-image: url(/public/payments-phone\ 1.png);
 
  
   }
@@ -545,7 +546,7 @@
   position: absolute;
   top: 89px;
   width: 793px;
-    background-image: url(./payments-column.png);
+    background-image: url(/public/payments-column.png);
 
    
  
@@ -557,7 +558,7 @@
     position: absolute;
     top: 216px;
     width: 210px;
-    background-image: url(./payments-pillar-large.png );
+    background-image: url(/public/payments-pillar-large.png );
   }
   .payments-pillar-small {
     height: 131px;
@@ -566,7 +567,7 @@
   position: absolute;
   top: 444px;
   width: 135px;
-    background-image: url(./payments-pillar-small.png);
+    background-image: url(/public/payments-pillar-small.png);
   }
   .payments-pillar-medium {
     height: 254px;
@@ -575,7 +576,7 @@
     position: absolute;
     top: 355px;
     width: 172px; 
-    background-image: url(./payments-pillar-medium.png);
+    background-image: url(/public/payments-pillar-medium.png);
   }
 
   .payments-pillar-medium-1 {
@@ -585,7 +586,7 @@
     position: absolute;
     top: 343px;
     width: 172px;
-    background-image: url(./payments-pillar-medium.png);
+    background-image: url(/public/payments-pillar-medium.png);
 
     }
     .payments-pillar-medium-2 {
@@ -595,7 +596,7 @@
       position: absolute;
       top: 450px;
       width: 172px; 
-      background-image: url(./payments-pillar-medium.png);
+      background-image: url(/public/payments-pillar-medium.png);
   
       }
       .payments-pillar-medium-3 {
@@ -605,7 +606,7 @@ object-fit: cover;
 position: absolute;
 top: 211px;
 width: 172px; 
-        background-image: url(./payments-pillar-medium.png);
+        background-image: url(/public/payments-pillar-medium.png);
     
         }
         .payments-column-1 {
@@ -621,7 +622,7 @@ width: 172px;
           position: absolute;
           top: 233px;
           width: 793px;
-         background-image: url(./payments-column.png);
+         background-image: url(/public/payments-column.png);
 
           }
           .payments-column-2 {
@@ -631,7 +632,7 @@ width: 172px;
           position: absolute;
           top: 211px;
           width: 794px;
-    background-image: url(./payments-column.png);
+    background-image: url(/public/payments-column.png);
 
           } 
 .payments-text {
@@ -640,7 +641,7 @@ width: 172px;
   position: absolute;
   top: 7px;
   width: 283px;
-  background-image: url(./Payments.png);
+  background-image: url(/public/Payments.png);
 }
 
 
@@ -678,7 +679,7 @@ width: 172px;
               position: absolute;
               top: 352px;
               width: 240px;
-              background-image: url(./banking-cubes.png);
+              background-image: url(/public/banking-cubes.png);
               }
               .section-banking .banking-track {
               height: 166px;
@@ -687,7 +688,7 @@ width: 172px;
               position: absolute;
               top: 0;
               width: 270px;
-              background-image: url(./banking-track-1.png);
+              background-image: url(/public/banking-track-1.png);
               }
               .section-banking .banking-phone {
               height: 408px;
@@ -696,7 +697,7 @@ width: 172px;
               position: absolute;
               top: 6px;
               width: 350px;
-              background-image: url(./banking-phone.png);
+              background-image: url(/public/banking-phone.png);
 
               }
               .section-banking .banking-ramp {
@@ -706,7 +707,7 @@ width: 172px;
               position: absolute;
               top: 48px;
               width: 280px;
-              background-image: url(./banking-ramp-1.png);
+              background-image: url(/public/banking-ramp-1.png);
 
               }
               .section-banking .section-text {
@@ -750,7 +751,7 @@ width: 172px;
               position: absolute;
               top: 511px;
               width: 300px;
-              background-image: url(./banking-ramp-2.png);
+              background-image: url(/public/banking-ramp-2.png);
 
               }
               .section-banking .banking-track-2 {
@@ -760,7 +761,7 @@ width: 172px;
               position: absolute;
               top: 16px;
               width: 250px;
-              background-image: url(./banking-track-2.png);
+              background-image: url(/public/banking-track-2.png);
 
               }
               .section-banking .banking-tube {
@@ -770,7 +771,7 @@ width: 172px;
               position: absolute;
               top: 628px;
               width: 150px;
-              background-image: url(./banking-tube.png);
+              background-image: url(/public/banking-tube.png);
 
               }
               .section-banking .overlap-2 {
@@ -789,7 +790,7 @@ width: 172px;
               position: absolute;
               top: 0;
               width: 320px;
-              background-image: url(./banking-hole.png);
+              background-image: url(/public/banking-hole.png);
 
               }
               .section-banking .banking-column {
@@ -799,7 +800,7 @@ width: 172px;
               position: absolute;
               top: 105px;
               width: 130px;
-              background-image: url(./banking-column.png);
+              background-image: url(/public/banking-column.png);
 
               }
               .section-banking .banking-monster {
@@ -809,7 +810,7 @@ width: 172px;
               position: absolute;
               top: 607px;
               width: 120px;
-              background-image: url(./banking-monster.png);
+              background-image: url(/public/banking-monster.png);
 
               }
               .section-banking .banking-stairs {
@@ -819,7 +820,7 @@ width: 172px;
               position: absolute;
               top: 283px;
               width: 90px;
-              background-image: url(./banking-stairs-1.png);
+              background-image: url(/public/banking-stairs-1.png);
 
               }
               .section-banking .banking-stairs-2 {
@@ -829,7 +830,7 @@ width: 172px;
               position: absolute;
               top: 414px;
               width: 80px;
-              background-image: url(./banking-stairs-2.png);
+              background-image: url(/public/banking-stairs-2.png);
 
               }
               .section-banking .banking-hole-2 {
@@ -839,7 +840,7 @@ width: 172px;
               position: absolute;
               top: 706px;
               width: 380px;
-              background-image: url(./banking-hole.png);
+              background-image: url(/public/banking-hole.png);
 
               }
               
@@ -864,7 +865,7 @@ width: 172px;
     position: absolute;
     top: 0;
     width: 929px;
-    background-image: url(./boost-stairs-1.png);
+    background-image: url(/public/boost-stairs-1.png);
 }
 
 .section-cash-card .img {
@@ -874,7 +875,7 @@ width: 172px;
     position: absolute;
     top: 162px;
     width: 379px;
-    background-image: url(./boost-stairs-2.png);
+    background-image: url(/public/boost-stairs-2.png);
 
 }
 
@@ -885,7 +886,7 @@ width: 172px;
     position: absolute;
     top: 212px;
     width: 80px;
-    background-image: url(./boost-card.png);
+    background-image: url(/public/boost-card.png);
 }
 
 .section-cash-card .boost-coffee {
@@ -895,7 +896,7 @@ width: 172px;
     position: absolute;
     top: 534px;
     width: 80px;
-    background-image: url(./boost-coffee.png);
+    background-image: url(/public/boost-coffee.png);
 
 }
 
@@ -906,7 +907,7 @@ width: 172px;
     position: absolute;
     top: 92px;
     width: 75px;
-    background-image: url(./boost-hand.png);
+    background-image: url(/public/boost-hand.png);
 
 }
 
@@ -917,7 +918,7 @@ width: 172px;
     position: absolute;
     top: 149px;
     width: 250px;
-    background-image: url(./boost-phone.png);
+    background-image: url(/public/boost-phone.png);
 
 }
 
@@ -928,7 +929,7 @@ width: 172px;
     position: absolute;
     top: 402px;
     width: 100px;
-    background-image: url(./boost-shoe.png);
+    background-image: url(/public/boost-shoe.png);
 
 }
 
@@ -939,7 +940,7 @@ width: 172px;
     position: absolute;
     top: 389px;
     width: 70px;
-    background-image: url(./boost-burger.png);
+    background-image: url(/public/boost-burger.png);
 
 }
 
@@ -1025,7 +1026,7 @@ width: 172px;
     position: absolute;
     top: 0;
     width: 408px;
-    background-image: url(./investing-graph-3\ 1.png);
+    background-image: url(/public/investing-graph-3\ 1.png);
 
 }
 
@@ -1035,7 +1036,7 @@ width: 172px;
     position: absolute;
     top: 0;
     width: 1366px;
-    background-image: url(./sunrays.png)
+    background-image: url(/public/sunrays.png)
 
 }
 
@@ -1046,7 +1047,7 @@ width: 172px;
     position: absolute;
     top: 123px;
     width: 255px;
-    background-image: url(./investing-graph-2.png);
+    background-image: url(/public/investing-graph-2.png);
 
 }
 
@@ -1057,7 +1058,7 @@ width: 172px;
     position: absolute;
     top: 436px;
     width: 644px;
-    background-image: url(./investing-graph-1.png);
+    background-image: url(/public/investing-graph-1.png);
 
 }
 
@@ -1141,7 +1142,7 @@ width: 172px;
     position: absolute;
     top: 252px;
     width: 160px;
-    background-image: url(./investing-stocks.png);
+    background-image: url(/public/investing-stocks.png);
 }
 
 .section-investing .investing-bitcoin {
@@ -1151,7 +1152,7 @@ width: 172px;
     position: absolute;
     top: 254px;
     width: 160px;
-    background-image: url(./investing-bitcoin.png);
+    background-image: url(/public/investing-bitcoin.png);
 
 }
 
@@ -1160,20 +1161,20 @@ width: 172px;
   height: 24px;
   position: relative;
   width: 24px;
-  background-image: url(./whatsapp.png);
+  background-image: url(/public/whatsapp.png);
   }
  .section-investing .fixed-footer .frame-2 {
   height: 17px;
   position: relative;
   width: 21px;
-  background-image: url(./twitter.png);
+  background-image: url(/public/twitter.png);
 
   }
  .section-investing .fixed-footer .frame-3 {
   height: 21px;
   position: relative;
   width: 21px;
-  background-image: url(./insta.png);
+  background-image: url(/public/insta.png);
 
   } 
   .section-investing .horizontal {
@@ -1182,7 +1183,7 @@ width: 172px;
     position: absolute;
     top: 0;
     width: 1366px;
-    background-image: url(./horizontalline.png);
+    background-image: url(/public/horizontalline.png);
   }
   .section-investing .forwordslash {
     height: 295px;
@@ -1190,7 +1191,7 @@ width: 172px;
     position: absolute;
     top: 3px;
     width: 526px;
-    background-image: url(./forwordslash.png);
+    background-image: url(/public/forwordslash.png);
 
   }
   
@@ -1200,7 +1201,7 @@ width: 172px;
     position: absolute;
     top: 20px;
     width: 1366px;
-    background-image: url(./manylines.png);
+    background-image: url(/public/manylines.png);
   }
   
   .section-investing .vector-3 {
@@ -1209,7 +1210,7 @@ width: 172px;
     position: absolute;
     top: 0;
     width: 1366px;
-    background-image: url(./verticallines.png);
+    background-image: url(/public/verticallines.png);
 
   }
   .section-investing .fixed-footer {
@@ -1223,7 +1224,7 @@ width: 172px;
     height: 23px;
     position: relative;
     width: 21px;
-    background-image: url(./insta.png);
+    background-image: url(/public/insta.png);
     }
     .section-investing .app-store {
       background-color: white;
@@ -1248,7 +1249,7 @@ width: 172px;
     height: 21.22px;
   position: relative;
   width: 19.45px;
-  background-image: url(./googleplay.png);
+  background-image: url(/public/googleplay.png);
    }
 
     .margin-div {
